// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render properly 1`] = `
<div
  className="food-details"
>
  <div
    className="food-details-header"
  >
    Food Details
  </div>
</div>
`;

exports[`should render the name of the food provided. 1`] = `
<div
  className="food-details"
>
  <div
    className="food-details-header"
  >
    Food Details
  </div>
  Cheeseburger
</div>
`;
